# eddy.sh

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  bunfig.toml  conanfile.txt  config.yaml  d.go  go.mod  index.ts  main.go  package.json  todo.md  tsconfig.json
.github/workflows/: release.yml
internal/cli/: cli.go
internal/config/: config.go
internal/error_codes/: codes.go
internal/errors/: codes.go
internal/exit_codes/: codes.go
internal/globals/: darwin.go  linux.go  shared.go  windows.go
internal/installers/: cpp.go  js.go  testing_mocks.go  tool.go  tools.go
internal/installers/cpp/: cmake.go  cpp.go  cpp_test.go  emsdk.go  helpers_test.go  ninja.go
internal/installers/general/: general_installers.go
internal/installers/javascript/: js.go  nvm.go  windows_nvm.go
internal/languages/: cpp.go  js.go  tool.go
internal/logger/: logger.go
internal/messages/: messages.go
internal/shell/: darwin.go  handler.go  helpers.go  shell.go  win.go
internal/types/: custom_scripts.go  git.go  log_type.go  platform.go  types.go
internal/utils/: types.go  utils.go
lib/: consts.ts  shared.ts  types.ts
lib/languages/: blueprint.ts  index.ts  tool.ts
lib/languages/cpp/: bazel.ts  cmake.ts  conan.ts  index.ts  ninja.ts
lib/languages/go/: index.ts  lang.ts
lib/logger/: index.ts
lib/mod/: index.ts
lib/tests/: setup.ts  shared.test.ts
scripts/: clang-tidy.sh  enable_debug.sh
src/: CMakeLists.txt  Config.cpp  Config.hpp  main.cpp
src/CommandHandler/: CommandHandler.hpp
src/Config/: Config.cpp  Config.hpp
src/Globals/: Globals.hpp
src/Languages/: Cpp.hpp  Javascript.hpp  Language.hpp  LanguageFactory.hpp  Python.hpp
src/Log/: Logger.hpp
src/Shell/: Shell.hpp
src/ShellWrapper/: ShellWrapper.hpp
src/Yaml/: CustomScript.hpp  Repository.hpp
(+5 files in other folders)
